--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Course work of Emma Houseknecht</title>
-<link rel="stylesheet" href="css/main.css">
+<link rel="stylesheet" href="main.css">
 </head>
 
 <body>
@@ -13,7 +13,7 @@
 			<ul>
 
 			<a href="https://xd.adobe.com/view/4de46b6b-2e1c-4466-abde-259b099200f2-18b7/"><li>E1: A Little Background</li></a>
-			<li>E2: Linking and hovering in XD</li>
+			<a href="https://xd.adobe.com/view/60559a50-1b65-48e6-9fed-c9ce678f4ff9-3506/"><li>E2: Linking and hovering in XD</li></a>
 			<li></li>
 			</ul>
 		</div>
