--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<h2>Project</h2>
 			<dl>
 				<dt>Project phase 1</dt>
-			<dd>P.P1.1: Idea</dd>
+			<dd><a href="e2.html">P.P1.1: Idea</a></dd>
 			<dd></dd>
 			</dl>
 			<dl>
