--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 			<dl>
 				<dt>Project phase 1</dt>
 			<dd><a href="e2.html">P.P1.1: Idea</a></dd>
-			<dd></dd>
+
+			<dd><a href="https://xd.adobe.com/view/78789425-118f-47f4-9018-60026eba7e43-2d2b/">P.P1.2: Competitive Study</a></dd>
 			</dl>
 			<dl>
 				<dt>Project phase 2</dt>
