--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<a href="https://xd.adobe.com/view/4de46b6b-2e1c-4466-abde-259b099200f2-18b7/"><li>E1: A Little Background</li></a>
 			<a href="https://xd.adobe.com/view/60559a50-1b65-48e6-9fed-c9ce678f4ff9-3506/"><li>E2: Linking and hovering in XD</li></a>
 			<a href="https://xd.adobe.com/view/94ab68d7-c26a-4101-8a49-c28e599372cf-c1f8/"><li>E3: Design Examples</li></a>
-			<a href="E4.html"><li>Text Only Layout</li></a>
+			<a href="E4.html"><li>E4: Text Only Layout</li></a>
 			<li></li>
 			</ul>
 		</div>
@@ -24,7 +24,7 @@
 		<h2>Project</h2>
 			<dl>
 				<dt>Project phase 1</dt>
-			<dd><a href="e2.html">P.P1.1: Idea</a></dd>
+			<dd><a href="P1.1Ideas.html">P.P1.1: Idea</a></dd>
 
 			<dd><a href="https://xd.adobe.com/view/78789425-118f-47f4-9018-60026eba7e43-2d2b/">P.P1.2: Competitive Study</a></dd>
 
