--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<h2>Project</h2>
 			<dl>
 				<dt>Project phase 1</dt>
-			<dd><a href="E2/P1.1Ideas.html">P.P1.1: Idea</a></dd>
+			<dd><a href="P1.1/P1.1Ideas.html">P.P1.1: Idea</a></dd>
 
 			<dd><a href="https://xd.adobe.com/view/78789425-118f-47f4-9018-60026eba7e43-2d2b/">P.P1.2: Competitive Study</a></dd>
 
