--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			<a href="https://xd.adobe.com/view/60559a50-1b65-48e6-9fed-c9ce678f4ff9-3506/"><li>E2: Linking and hovering in XD</li></a>
 			<a href="https://xd.adobe.com/view/94ab68d7-c26a-4101-8a49-c28e599372cf-c1f8/"><li>E3: Design Examples</li></a>
 			<a href="E4/E4.html"><li>E4: Text Only Layout</li></a>
-			<li></li>
+			
 			</ul>
 		</div>
 
@@ -28,6 +28,9 @@
 
 			<dd><a href="https://xd.adobe.com/view/78789425-118f-47f4-9018-60026eba7e43-2d2b/">P.P1.2: Competitive Study</a></dd>
 
+			<dd><a href=" ">P.P1.3: User Scenario Mapping</a></dd>
+
+			<dd><a href="https://xd.adobe.com/view/7e3b6476-e5f2-4b85-aba6-c1d9c5dbb6f8-2b68/">P.P1.4: Site Map</a></dd>
 
 			</dl>
 			<dl>
