--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 			<dd><a href="https://xd.adobe.com/view/78789425-118f-47f4-9018-60026eba7e43-2d2b/">P.P1.2: Competitive Study</a></dd>
 
-			<dd><a href=" ">P.P1.3: User Scenario Mapping</a></dd>
+			<dd><a href="P1.3/P. P1.3-index.html ">P.P1.3: User Scenario Mapping</a></dd>
 
 			<dd><a href="https://xd.adobe.com/view/7e3b6476-e5f2-4b85-aba6-c1d9c5dbb6f8-2b68/">P.P1.4: Site Map</a></dd>
 
