--- a/P1.3/P. P1.3-index.html
+++ b/P1.3/P. P1.3-index.html
@@ -21,8 +21,7 @@
 				<p>She buys a collection from Kitchy</p>
 		<div>
 			<h2>Scenario:</h2>
-				<p>Andrea is a young woman who recently renovated her kitchen into the kitchen of her dreams. Unfortunately, she felt like her current kitchen utensils and dishware no longer fit in with the rest of her new kitchen. While searching for new kitchenware, she comes across a website called Kitchy. Drawn to the unique kitchenware designs, Andrea browses the website. After looking through some of the collections offered, she finds a kitchenware collection she feels will fit her kitchen aesthetic. She decides to place an order from Kitchy, excited to have new kitchenware on the way.</p>
-		</div>
+				<p>Andrea is a young woman who recently renovated her kitchen into the kitchen of her dreams. Unfortunately, she felt like her current kitchen utensils and dishware no longer fit in with the rest of her new kitchen. While searching for new kitchenware, she comes across a website called Kitchy. Drawn to the unique kitchenware designs, Andrea browses the website. After looking through some of the collections offered, she finds a kitchenware collection she feels will fit her kitchen aesthetic. She decides to place an order from Kitchy, excited to have new kitchenware on the way.</p></div>
 
 	</body>
 </html>
