--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 			<a href="https://xd.adobe.com/view/60559a50-1b65-48e6-9fed-c9ce678f4ff9-3506/"><li>E2: Linking and hovering in XD</li></a>
 			<a href="https://xd.adobe.com/view/94ab68d7-c26a-4101-8a49-c28e599372cf-c1f8/"><li>E3: Design Examples</li></a>
 			<a href="E4/E4.html"><li>E4: Text Only Layout</li></a>
+			<a href="https://xd.adobe.com/view/09f931b4-1d64-4d45-b7f0-0fa0125579d6-5caa/"><li>E5: Study on shopping cart and checkout process</li></a>
 			
 			</ul>
 		</div>
