--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
 			</dl>
 			<dl>
 				<dt>Project phase 2</dt>
-			<dd>P. P2.1: Brief style guide
-			</dd>
+			<dd><a href="https://xd.adobe.com/view/79b6647b-98d8-4c1c-9fd1-b8993861cc9f-2ce5/">P. P2.1: Brief style guide</a></dd>
 			<dd>P.P2.2: First draft of homepage at all sizes <a href="#">Desktop</a>, <a href="#"> Tablet</a>, <a href="#"> Mobile</a> </dd>
 			</dl>
 			<dl>
