--- a/index.html
+++ b/index.html
@@ -37,7 +37,11 @@
 			<dl>
 				<dt>Project phase 2</dt>
 			<dd><a href="https://xd.adobe.com/view/79b6647b-98d8-4c1c-9fd1-b8993861cc9f-2ce5/">P. P2.1: Brief style guide</a></dd>
-			<dd>P.P2.2: First draft of homepage at all sizes <a href="#">Desktop</a>, <a href="#"> Tablet</a>, <a href="#"> Mobile</a> </dd>
+
+			<dd>P.P2.2: First draft of homepage at all sizes 
+				<a href="https://xd.adobe.com/view/aef6286d-eb8d-4a9a-96bf-cb67d9f6179b-fba5/">Desktop</a>, 
+				<a href="https://xd.adobe.com/view/a6dfdbe8-4924-4c7c-9724-a891e3e6239a-f38c/"> Tablet</a>, 
+				<a href="https://xd.adobe.com/view/f195fbbc-0b49-49d7-a17b-44051d347107-a4c6/"> Mobile</a> </dd>
 			</dl>
 			<dl>
 				<dt>Project phase 3</dt>
