--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
 
 			<dd><a href="https://xd.adobe.com/view/7e3b6476-e5f2-4b85-aba6-c1d9c5dbb6f8-2b68/">P.P1.4: Site Map</a></dd>
 
+			<dd>P.P1.5: Wireframes 
+				<a href="https://xd.adobe.com/view/9902eddc-70fa-485f-b64e-56a57c9aa195-cc51/">Desktop</a>, 
+				<a href="https://xd.adobe.com/view/05c62964-85f4-4fbc-9f1a-0204921e1c44-5095/"> Tablet</a>, 
+				<a href="https://xd.adobe.com/view/dfbe8636-a982-4424-b1b4-bcedaabeacab-8aed/"> Mobile</a> </dd>
+
 			</dl>
 			<dl>
 				<dt>Project phase 2</dt>
