--- a/index.html
+++ b/index.html
@@ -47,6 +47,20 @@
 				<a href="https://xd.adobe.com/view/aef6286d-eb8d-4a9a-96bf-cb67d9f6179b-fba5/">Desktop</a>, 
 				<a href="https://xd.adobe.com/view/a6dfdbe8-4924-4c7c-9724-a891e3e6239a-f38c/"> Tablet</a>, 
 				<a href="https://xd.adobe.com/view/f195fbbc-0b49-49d7-a17b-44051d347107-a4c6/"> Mobile</a> </dd>
+
+
+			<dd>P.P2.3: First draft of inventory page at all sizes 
+				<a href="https://xd.adobe.com/view/62e8c471-a51b-4667-a38b-3b1cb703cfb7-37bb/">Desktop</a>, 
+				<a href="https://xd.adobe.com/view/62fda037-51a7-428f-a16d-de0a4f385bdf-37ae/"> Tablet</a>, 
+				<a href="https://xd.adobe.com/view/c50f4638-3bf7-4c68-9b8e-7f78ac8e8816-905c/"> Mobile</a> </dd>
+
+
+				<dd>P.P2.4: First draft of product page at all sizes 
+				<a href="https://xd.adobe.com/view/330cddc8-2323-4d43-9471-b30fa8a7c27d-665f/">Desktop</a>, 
+				<a href="https://xd.adobe.com/view/5e9b946c-54b9-415a-8a45-1c170b565c99-0bc8/"> Tablet</a>, 
+				<a href="https://xd.adobe.com/view/d10b171a-3e07-49a5-9133-55da3927b897-8458/"> Mobile</a> </dd>
+
+
 			</dl>
 			<dl>
 				<dt>Project phase 3</dt>
