--- a/index.html
+++ b/index.html
@@ -60,6 +60,11 @@
 				<a href="https://xd.adobe.com/view/5e9b946c-54b9-415a-8a45-1c170b565c99-0bc8/"> Tablet</a>, 
 				<a href="https://xd.adobe.com/view/d10b171a-3e07-49a5-9133-55da3927b897-8458/"> Mobile</a> </dd>
 
+				<dd>P.P2.6: First draft of checkout process page at all sizes 
+				<a href="https://xd.adobe.com/view/c7f5823c-5888-4fdb-b113-9aa351bf7fec-92a6/">Desktop</a>, 
+				<a href=""> Tablet</a>, 
+				<a href=""> Mobile</a> </dd>
+
 
 			</dl>
 			<dl>
