--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
 				<a href="https://xd.adobe.com/view/d10b171a-3e07-49a5-9133-55da3927b897-8458/"> Mobile</a> </dd>
 
 				<dd>P.P2.6: First draft of checkout process page at all sizes 
-				<a href="https://xd.adobe.com/view/c7f5823c-5888-4fdb-b113-9aa351bf7fec-92a6/">Desktop</a>, 
-				<a href=""> Tablet</a>, 
-				<a href=""> Mobile</a> </dd>
+				<a href="https://xd.adobe.com/view/99d976a7-d8a9-44a1-833a-b8c48e2fc718-cc8a/">Desktop</a>, 
+				<a href="https://xd.adobe.com/view/1885719a-6475-4bd1-87db-cfba252a4873-4dd6/"> Tablet</a>, 
+				<a href="https://xd.adobe.com/view/84817aa9-908e-4ce9-a2c3-f79ef798c31e-d1d2/"> Mobile</a> </dd>
 
 
 			</dl>
