--- a/index.html
+++ b/index.html
@@ -60,6 +60,11 @@
 				<a href="https://xd.adobe.com/view/5e9b946c-54b9-415a-8a45-1c170b565c99-0bc8/"> Tablet</a>, 
 				<a href="https://xd.adobe.com/view/d10b171a-3e07-49a5-9133-55da3927b897-8458/"> Mobile</a> </dd>
 
+				<dd>P.P2.5: First draft of the fourth page (all sizes) 
+				<a href="https://xd.adobe.com/view/61d2e051-5bec-4c60-85dc-5597eabca05a-3481/">Desktop</a>, 
+				<a href="https://xd.adobe.com/view/842a597b-95f1-43af-a8c2-40e18066d5ca-d179/"> Tablet</a>, 
+				<a href="https://xd.adobe.com/view/10cac0d2-8f9c-4ba5-8621-4a18113aa24f-4599/"> Mobile</a> </dd>
+
 				<dd>P.P2.6: First draft of checkout process page at all sizes 
 				<a href="https://xd.adobe.com/view/99d976a7-d8a9-44a1-833a-b8c48e2fc718-cc8a/">Desktop</a>, 
 				<a href="https://xd.adobe.com/view/1885719a-6475-4bd1-87db-cfba252a4873-4dd6/"> Tablet</a>, 
