--- a/index.html
+++ b/index.html
@@ -70,14 +70,11 @@
 				<a href="https://xd.adobe.com/view/1885719a-6475-4bd1-87db-cfba252a4873-4dd6/"> Tablet</a>, 
 				<a href="https://xd.adobe.com/view/84817aa9-908e-4ce9-a2c3-f79ef798c31e-d1d2/"> Mobile</a> </dd>
 
-			<dt>Project phase 3</dt>
-			<dd><a href="https://xd.adobe.com/view/75debb6e-8719-4a01-af1b-e84630aa1071-208d/">P.P3.1: Initial interactive prototype of all pages at desktop size</a></dd>
-
 
 			</dl>
 			<dl>
 				<dt>Project phase 3</dt>
-			<dd>P.P3.1: Initial Protoypes for all pages at <a href="#">Desktop </a>size </dd>
+			<dd>P.P3.1: Initial Protoypes for all pages at <a href="https://xd.adobe.com/view/75debb6e-8719-4a01-af1b-e84630aa1071-208d/">Desktop </a>size </dd>
 			<dd>P.P3.2: Initial Protoypes for all pages at <a href="#">Mobile</a> and <a href="#">Tablet</a> sizes</dd>
 			<dd>P.P3.3: Project Portfolio</dd>
 			<dd>P.P3.4: Final Online Store <a href="#">Desktop</a>, <a href="#"> Tablet</a>, <a href="#"> Mobile</a></dd>
