--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
 			<dl>
 				<dt>Project phase 3</dt>
 			<dd>P.P3.1: Initial Protoypes for all pages at <a href="https://xd.adobe.com/view/75debb6e-8719-4a01-af1b-e84630aa1071-208d/">Desktop </a>size </dd>
-			<dd>P.P3.2: Initial Protoypes for all pages at <a href="#">Mobile</a> and <a href="#">Tablet</a> sizes</dd>
+			<dd>P.P3.2: Initial Protoypes for all pages at <a href="">Mobile</a> and <a href="#">Tablet</a> sizes</dd>
 			<dd>P.P3.3: Project Portfolio</dd>
-			<dd>P.P3.4: Final Online Store <a href="#">Desktop</a>, <a href="#"> Tablet</a>, <a href="#"> Mobile</a></dd>
+			<dd>P.P3.4: Final Online Store <a href="https://xd.adobe.com/view/75debb6e-8719-4a01-af1b-e84630aa1071-208d/">Desktop</a>, <a href="https://xd.adobe.com/view/306100f9-8705-433c-bedc-7b1763892ad5-6532/"> Tablet</a>, <a href="https://xd.adobe.com/view/52f32ff6-2a25-4263-a465-e83776f16cd8-07a0/"> Mobile</a></dd>
 			<dd>Project Portfolio</dd>
 </body>
 </html>
